Fix overflowing style for search box

--- a/resources/css/sass/style.scss
+++ b/resources/css/sass/style.scss
@@ -24,16 +24,21 @@ html, body {
     box-shadow: 1px 1px 4px rgba(68, 68, 68, 0.7);
     color: $gray-light;
 }
-.search-input {
-    width: 90%;
-    background-color: transparent;
-    outline: none;
-    border: none;
-    font-size:16px;
-    color: $gray-base;
+
+.controls-container {
+    .search-input {
+        width: 90%;
+        background-color: transparent;
+        outline: none;
+        border: none;
+        font-size:16px;
+        color: $gray-base;
+    }
+
 }
 @media only screen and (max-width: 768px) {
     .controls-container {
-        width: 98%;
+        width: 95%;
+        padding: 10px 2px 10px 10px;
     }
 }
